09-Apr-2016 Fixes #208. Address performance issues identified by SlimTune in generating file filters for VisualStudio projects. A large project tested (a solution with 99 projects) showed a 50% reduction in time spent executing the dependency graph afer this change.

08-Apr-2016 Fixes #207. Added predication on the settings type in VisualCCommon.Compiler's PublicPatch for C.ICommonCompilerSettings. This would have resulted in a Null reference exception if applied to any module Settings class that doesn't implement that interface. This could happen for procedurally generated source files with custom Settings.

07-Apr-2016 Fixes #205. Mingw now also supports the C.Cxx.ELanguageStandard.GnuCxx98 mode.

06-Apr-2016 Fixes #204. C.ICommonLinkerSettings.Libraries are now honoured in Xcode projects. Since Xcode projects require full paths to libraries, library search paths are searched to find each library. If they are not found, SDK library paths are searched. If the library is not found, then an exception is raised.

06-Apr-2016 Issue #204. Added test LinkPrebuiltLibrary, to exercise linking libraries that already exist, and aren't built as part of a Bam build.

06-Apr-2016 Issue #197. CModuleContainer.ExtendWith now identifies any cloned object files with sources that implement Bam.Core.ICloneModule. This is to identify cases where the source file has been procedurally generated, and thus also requires cloning, so that the source generation is also merged into the module ExtendWith was invoked on.

06-Apr-2016 Issue #197. Added a new parameter to Bam.Core.Module.Create, postInitCallback, of type Bam.Core.Module.PostInitDelegate. This is similar to the PreInitDelegate, but invoked after the Module's Init function is called. This is also now an optional parameter to CloneWithPrivatePatches. This is to allow custom configuration of Module data.
